--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,11 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "engines":{
+    "node":"14.x"
+  },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
