--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "node":"14.x"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
